fix: update .gitignore to include all debug files and editor config

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ Source code/.vscode/*
 Source code/settings.json
 
 # Debug files
-debug.txt
-debug_relic_analysis.txt
+debug*.txt
+editor_config.json
