feat: show strict invalid reason in Modify dialog
- Add get_strict_invalid_reason() to RelicChecker that explains why a relic
  has 0% weight effects in their assigned pools
- Add get_effect_name() to SourceDataHandler for human-readable effect names
- Update Modify dialog to show 'STRICT INVALID' status with detailed reason
  explaining which effects need different pools
- Helps users understand why relics are flagged and how to fix them

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@ Source code/settings.json
 # Debug files
 debug*.txt
 editor_config.json
+*_debug.txt
+preset_debug.txt
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# Decrypted save files
+src/decrypted_output/
+
+# Dev/test scripts
+src/analyze_presets.py
+src/check_deep_relics.py
+src/check_relic_ids.py
+src/find_vessel.py
+src/find_presets.py
